@@ -100,3 +100,5 @@ require_relative 'excel_functions/lower'
 require_relative 'excel_functions/exp'
 
 require_relative 'excel_functions/isblank'
+
+require_relative 'excel_functions/averageifs'
