@@ -1,5 +1,6 @@
 # Head
 
+- Implemented the AVERAGEIFS function
 - Implemented ExcelToCode.version and display this when running the program or listing errors
 - Updated how to add a missing function docs
 
